--- a/Android/app/app/src/main/res/layout/activity_main.xml
+++ b/Android/app/app/src/main/res/layout/activity_main.xml
@@ -87,6 +87,16 @@
 
         </android.support.v7.widget.Toolbar>
 
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:onClick="openCam"
+            android:text="Cam"
+            android:id="@+id/Cam"
+
+            />
+
 
     </android.support.design.widget.AppBarLayout>
 
